kubernetes/kong/kong-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager-ingress
  annotations:
    kubernetes.io/ingress.class: 'kong'
    konghq.com/strip-path: 'false'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /kong-manager
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
