kubernetes/kong/quick-links-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quick-links-ingress
  annotations:
    kubernetes.io/ingress.class: 'kong'
    konghq.com/strip-path: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /quick-links
            pathType: Prefix
            backend:
              service:
                name: quick-links-service
                port:
                  number: 3000
